fixes: some sort of refactoring configuration